--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -33,7 +33,7 @@
 
 ### Backend/performance options
 backend = "glx";
-paint-on-overlay = true;
+#paint-on-overlay = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 
@@ -88,22 +88,31 @@ shadow-ignore-shaped = false;
 
 ### Opacity
 menu-opacity = 0.90;
-inactive-opacity = 0.7;
+inactive-opacity = 0.8;
 # active-opacity = 0.8;
 frame-opacity = 0.90;  # i.e. titlebars, borders
 inactive-opacity-override = false;
-alpha-step = 0.06;
-# opacity-rule = [ "100:class_g = 'vlc'" ];
+# alpha-step = 0.06;
+opacity-rule = [ 
+	"100:class_g = 'vlc'", 
+	"100:class_g = 'Chromium'",
+	"100:class_g = 'firefox'",
+];
 
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 
 ### Blur options
+
 blur-background = true;
 blur-background-frame = true;
-blur-kern = "5x5box"
+#blur-kern = "21,21,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,"
+
+#blur-kern = "5,5,0.023528,0.033969,0.038393,0.033969,0.023528,0.033969,0.049045,0.055432,0.049045,0.033969,0.038393,0.055432,0.062652,0.055432,0.038393,0.033969,0.049045,0.055432,0.049045,0.033969,0.023528,0.033969,0.038393,0.033969,0.023528,"
+blue-kern="5x5box"
 blur-background-fixed = true;
-blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
+
+#blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ];
 
 ### Fading
 fading = true;
