--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -33,7 +33,6 @@
 
 ### Backend/performance options
 backend = "glx";
-#paint-on-overlay = true;
 glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 
@@ -88,7 +87,7 @@ shadow-ignore-shaped = false;
 
 ### Opacity
 menu-opacity = 0.90;
-inactive-opacity = 0.8;
+# inactive-opacity = 0.8;
 # active-opacity = 0.8;
 frame-opacity = 0.90;  # i.e. titlebars, borders
 inactive-opacity-override = false;
